--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -8,6 +8,9 @@ see https://github.com/pages-themes/leap-day
 */
 
 header {
-  background-color: red;
+  background-color: blue;
 }
 
+.wrapper {
+  background-color: white;
+}
